Bug 73618 - Presenter console: Don't see the active slide after launch
Summary: Presenter console: Don't see the active slide after launch
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.2 rc
Hardware: x86-64 (AMD64) Linux (All)
: highest major
Assignee: Stephan Bergmann
URL:
Whiteboard: target:4.3.0 target:4.2.0
Keywords: regression
: 73980 (view as bug list)
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-01-14 17:30 UTC by vulcain
Modified: 2014-01-26 17:28 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of presenter (left) + Screen for listeners (right). The first slide is missing (272.39 KB, image/png)
2014-01-14 17:30 UTC, vulcain
Details
Expected result (302.16 KB, image/png)
2014-01-14 17:40 UTC, vulcain
Details
Screenshot of presenter (left) + Screen for listeners (right). The first slide is missing with LibreOffice 4.2 beta 1 (149.97 KB, image/png)
2014-01-19 16:42 UTC, vulcain
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vulcain 2014-01-14 17:30:06 UTC
Created attachment 92056 [details]
Screenshot of presenter (left) + Screen for listeners (right). The first slide is missing

In LibreOffice 4.2.0.2 Build ID: 601a398b803303d1a40a3299729531824fe0db56, after launch via F5 a Presentation, presenter console don't show the first slide for the narrator's screen.

1) Add a secondary monitor to your computer
2) Open an odp
3) Launch via F5
4) Result see attachement: the presenter can't see the active slide. 

Sometime, the active slide come back but never just after the launch. You must click next, first.



Expected: see the active slide
Comment 1 vulcain 2014-01-14 17:40:22 UTC
Created attachment 92064 [details]
Expected result

Screenshot of expected result.

Make with LibreOffice 3.5.7.2 
Version ID : 350m1(Build:2)
Comment 2 Jean-Baptiste Faure 2014-01-16 11:31:25 UTC
Reproducible for me on Ubuntu 13.10 x86-64.

Best regards. JBF
Comment 3 Jean-Baptiste Faure 2014-01-16 12:01:28 UTC
In fact the first view is correct for me, the problem appears when I go to the second slide (hit the next button).

Best regards. JBF
Comment 4 Björn Michaelsen 2014-01-17 09:40:31 UTC
(This is an automated message.)

Setting priority to highest as this is a 4.2 MAB. This is part of an effort to make the importance of MAB reflected in priority too.
Comment 5 Jean-Baptiste Faure 2014-01-19 14:38:55 UTC
Setting severity to major because this bug prevent you to do your presentation normally, the only available workaround is to disable the PresenterConsole. 
Not all users know how to do that : menu Tools > Options > LibreOffice Impress > General.

Best regards. JBF
Comment 6 Jean-Baptiste Faure 2014-01-19 16:37:06 UTC
Hi Michael, Thorsten,

This bug (and the 3 others probably related) may be interesting for you, if you plan to use LO 4.2 for presentations at Fosdem :-)

Best regards. JBF
Comment 7 vulcain 2014-01-19 16:42:53 UTC
Created attachment 92404 [details]
Screenshot of presenter (left) + Screen for listeners (right). The first slide is missing with LibreOffice 4.2 beta 1

With Version: 4.2.0.0.beta1 Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7
Comment 8 vulcain 2014-01-19 16:48:45 UTC
I test other version of LibreOffice.

Don't reproduce with:
* 4.1.4.2 Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72
* 4.1.5.1 Build ID: e0a1805d063a472a7b281ae3977a26d42a48b20


bug reproduce with:
* 4.2.0.0.beta1 Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7
* 4.2.0.0.beta2 Build ID: 1a27be92e320f97c20d581a69ef1c8b99ea9885d
* 4.3.0.0.alpha0+ Build ID: 602c87b4259d118e5db6d8a990c4695103f916dd
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-01-18_00:02:21

With 4.2.0.0 beta1, there are worst: the screen are black but the behavior is the same. Presenter console crash often.
Comment 9 vulcain 2014-01-19 16:51:51 UTC
Comment on attachment 92404 [details]
Screenshot of presenter (left) + Screen for listeners (right). The first slide is missing with LibreOffice 4.2 beta 1

With Version: 4.2.0.0.beta1 Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7
Comment 10 Michael Meeks 2014-01-20 11:45:59 UTC
Andras - this looks like something that'd be worth Andrzej's time to look at before FOSDEM =)
Comment 11 Michael Stahl 2014-01-21 12:44:12 UTC
bibsecting this is very frustrating;

newest known good commit: 832586588c3ed5f1686a4ecebc2ed198ce049b24
oldest known bad  commit: 5a3143c1a44d4c9d922aa33812d7c428664a8cf9

unfortunately there are 40 or so commits in Bjoern's bibisect
between those that crash and burn on startup or when starting slideshow.
Comment 12 Michael Stahl 2014-01-21 18:58:03 UTC
so bisecting manually with the fix for the crasher bug 71527
maually applied gives:

regression from:

commit 3af99e4d59d89c343965a928681a30f36b1007d2
Author:     Noel Grandin <noel@peralex.com>
AuthorDate: Tue Nov 19 15:58:58 2013 +0200

    convert equalsAsciiL calls to startsWith calls
    
    Convert code like:
        aStr.equalsAsciiL( RTL_CONSTASCII_STRINGPARAM( "ActiveConnection" ) )
    to
        aStr.startsWith( "ActiveConnection" )
    which compiles down to the same machine code.
    
actually this commit lets the active slide disappear after clicking Next.

there is a pre-existing other bug here that leaves most of the presenter
screen missing (black) but that has been introduced earlier and fixed
since then, while the "active slide" bug is still there.

now it turns out that Stephan has already reverted the above commit
for other reasons just 4 hours ago, but he clearly failed to document
that that fixes this bug too.

fixed on master by commit a3f32769fc4bb23c64168b412dd10ec769a3854d
Comment 13 Michael Stahl 2014-01-21 19:33:21 UTC
forgot to say:
fixed on libreoffice-4-2 by commit 523ad9696c9135a29393a0c4d147ab206b6de4f5
Comment 14 Commit Notification 2014-01-21 19:50:17 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=592f4e2a716e91a49485eb921f00fd92b2e3dfed&h=libreoffice-4-2-0

fdo#73618: Fix bogus mass-conversion equalsAsciiL -> startsWith


It will be available already in LibreOffice 4.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Jean-Baptiste Faure 2014-01-21 20:09:06 UTC
Verified for version 4.2.1.0.0+ on Ubuntu 13.10.

Big thank you Stephan for the fix !!!

Best regards. JBF
Comment 16 vulcain 2014-01-23 22:12:06 UTC
I confirm this bug is resolved in 4.2.0.3 Build ID: c63c03decdf780d8fb80823950665b782ec9ecd0 on Ubuntu 12.04.4 

@ Stahl and JBF: Thanks you
Comment 17 Jean-Baptiste Faure 2014-01-26 17:28:56 UTC
*** Bug 73980 has been marked as a duplicate of this bug. ***