fdo#73618: Fix bogus mass-conversion equalsAsciiL -> startsWith

3af99e4d59d89c343965a928681a30f36b1007d2 "convert equalsAsciiL calls to
startsWith calls" should rather have converted to oprator ==.

(cherry picked from commit a3f32769fc4bb23c64168b412dd10ec769a3854d)
Conflicts:
	sc/source/ui/unoobj/nameuno.cxx
	sc/source/ui/unoobj/styleuno.cxx
	sfx2/source/appl/sfxhelp.cxx
	stoc/source/security/permissions.cxx
	sw/source/core/unocore/unocrsrhelper.cxx

(None of those bogus startsWith calls seem problematic enough to warrant
backporting also to libreoffice-4-2-0.) <- this is utter nonsense, this
commit actually fixes fdo#73618

Reviewed-on: https://gerrit.libreoffice.org/7578
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 523ad9696c9135a29393a0c4d147ab206b6de4f5)

Change-Id: Id4a8836c5d6d570e54661c40be7214632e202b21