svx/source/items/galleryitem.cxx
@@ -87,27 +87,27 @@ bool SvxGalleryItem::PutValue( const css::uno::Any& rVal, sal_uInt8 /* nMemberId
     const css::beans::PropertyValue *pEnd = pProp + aSeq.getLength();
     for ( ; pProp != pEnd; pProp++ )
     {
-        if ( pProp->Name.startsWith( SVXGALLERYITEM_TYPE ) )
+        if ( pProp->Name == SVXGALLERYITEM_TYPE )
         {
             bAllConverted &= bIsSetType = ( pProp->Value >>= nType );
             ++nConverted;
         }
-        else if ( pProp->Name.startsWith( SVXGALLERYITEM_URL ) )
+        else if ( pProp->Name == SVXGALLERYITEM_URL )
         {
             bAllConverted &= ( pProp->Value >>= aURL );
             ++nConverted;
         }
-        else if ( pProp->Name.startsWith( SVXGALLERYITEM_FILTER ) )
+        else if ( pProp->Name == SVXGALLERYITEM_FILTER )
         {
             bAllConverted &= ( pProp->Value >>= aFilterName );
             ++nConverted;
         }
-        else if ( pProp->Name.startsWith( SVXGALLERYITEM_DRAWING ) )
+        else if ( pProp->Name == SVXGALLERYITEM_DRAWING )
         {
             bAllConverted &= ( pProp->Value >>= xDrawing );
             ++nConverted;
         }
-        else if ( pProp->Name.startsWith( SVXGALLERYITEM_GRAPHIC ) )
+        else if ( pProp->Name == SVXGALLERYITEM_GRAPHIC )
         {
             bAllConverted &= ( pProp->Value >>= xGraphic );
             ++nConverted;
