sw/source/core/unocore/unocrsrhelper.cxx
@@ -1184,7 +1184,7 @@ void makeRedline( SwPaM& rPaM,
         eType = nsRedlineType_t::REDLINE_FORMAT;
     else if ( rRedlineType == "TextTable" )
         eType = nsRedlineType_t::REDLINE_TABLE;
-    else if( !rRedlineType.startsWith( "Insert" ))
+    else if( rRedlineType != "Insert" )
         throw lang::IllegalArgumentException();
 
     //todo: what about REDLINE_FMTCOLL?
